Add tone.js and playMelody

--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "mdbreact": "^4.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "tone": "^13.8.25"
   },
   "scripts": {
     "start": "react-scripts start",
