--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compileOnSave": true,
   "compilerOptions": {
     "outDir": "./build",
-    "watch": true,
+    "watch": false,
     "lib": ["es5", "es6"],
     "target": "es5",
     "module": "commonjs",
