--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Backend for BotBand",
   "version": "0.0.1",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lodash": "^4.17.15"
