--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lodash": "^4.17.15"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/jest": "^26.0.3",
     "@types/lodash": "^4.14.157",
     "@types/node": "^14.0.14",
+    "babel-jest": "^26.1.0",
+    "jest": "^26.1.0",
     "typescript": "^3.9.5"
   },
   "engines": {
@@ -18,6 +24,7 @@
   },
   "scripts": {
     "start": "node build/index.js",
-    "build": "npx tsc -p tsconfig.json"
+    "build": "npx tsc -p tsconfig.json",
+    "test": "jest"
   }
 }
