--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@types/jest": "^26.0.3",
     "@types/lodash": "^4.14.157",
     "@types/node": "^14.0.14",
+    "babel-cli": "^6.26.0",
     "babel-jest": "^26.1.0",
+    "babel-preset-env": "^1.7.0",
     "jest": "^26.1.0",
+    "superagent": "^5.3.1",
+    "supertest": "^4.0.2",
     "typescript": "^3.9.5"
   },
   "engines": {
