--- a/client/.env.development
+++ b/client/.env.development
@@ -1,1 +1,4 @@
+# For some reason running React App checks for dependency conflicts in the root directory.
+SKIP_PREFLIGHT_CHECK=true
+
 REACT_APP_API_URL=http://localhost:9000
