--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "lodash": "^4.17.19"
+    "lodash": "^4.17.19",
+    "uuid": "^8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
