--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lodash": "^4.17.19",
+    "mathjs": "^7.1.0",
     "uuid": "^8.2.0"
   },
   "devDependencies": {
